--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -1,6 +1,6 @@
 .header {
   width: 100%;
-  height: 10rem;
+  padding: 2rem 0rem;
   border: 1px solid blue;
   display: flex;
   justify-content: space-evenly;
