--- a/src/styles/components/layout.scss
+++ b/src/styles/components/layout.scss
@@ -1,8 +1,9 @@
 .layout {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  flex-direction: column;
   width: 100%;
   border: 1px solid red;
+  height: 100vh;
 }
