--- a/src/styles/pages/homepage.scss
+++ b/src/styles/pages/homepage.scss
@@ -4,3 +4,35 @@
   justify-content: center;
   flex-direction: column;
 }
+
+table {
+  width: 100%;
+  max-width: 1200px;
+  margin: 20px 0;
+  border-collapse: collapse;
+}
+
+thead th {
+  background-color: #f2f2f2;
+  padding: 20px;
+}
+
+tbody tr {
+  border-bottom: 1px solid #ddd;
+}
+
+tbody td {
+  padding: 20px;
+  text-align: center;
+}
+
+tbody img {
+  border-radius: 50%;
+  margin-bottom: 10px;
+}
+
+.loading {
+  margin-top: 20px;
+  text-align: center;
+  font-size: 18px;
+}
