--- a/src/styles/pages/homepage.scss
+++ b/src/styles/pages/homepage.scss
@@ -3,36 +3,57 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  color: var(--color-grey-25);
 }
 
-table {
-  width: 100%;
-  max-width: 1200px;
-  margin: 20px 0;
+.employees {
+  width: 95%;
   border-collapse: collapse;
+  &__header {
+    border-bottom: 1px solid var(--color-grey-700);
+    &__tags {
+      text-align: left;
+      &__tag {
+        font-weight: var(--font-weight-semibold);
+        font-size: var(--text-size-md);
+        line-height: 1rem;
+        color: var(--color-grey-300);
+        padding: 1.5rem;
+      }
+    }
+  }
 }
 
-thead th {
-  background-color: #f2f2f2;
-  padding: 20px;
-}
-
-tbody tr {
-  border-bottom: 1px solid #ddd;
-}
-
-tbody td {
-  padding: 20px;
-  text-align: center;
-}
-
-tbody img {
-  border-radius: 50%;
-  margin-bottom: 10px;
-}
-
-.loading {
-  margin-top: 20px;
-  text-align: center;
-  font-size: 18px;
+.employee {
+  cursor: pointer;
+  transition: background-color 100ms ease-in;
+  &:hover {
+    background-color: var(--color-grey-800);
+  }
+  &__info {
+    color: var(--color-grey-100);
+    font-size: var(--text-size-md);
+    padding: 1.5rem;
+    color: var(--color-grey-300);
+  }
+  &__img {
+    border-radius: var(--border-sm);
+    object-fit: cover;
+    object-position: center;
+  }
+  &__details {
+    cursor: pointer;
+    color: var(--color-grey-300);
+    padding: 1rem 3rem;
+    border: 1px solid var(--color-grey-25);
+    background-color: var(--color-grey-950);
+    border-radius: var(--border-round);
+    font-weight: var(--font-weight-semibold);
+    font-size: var(--text-size-md);
+    transition: all 250ms ease;
+    &:hover {
+      background-color: var(--color-grey-25);
+      color: var(--color-grey-950);
+    }
+  }
 }
