--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -4,6 +4,10 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  border-bottom: 1px solid var(--color-grey-500);
   background-color: var(--color-grey-950);
+  &__hr {
+    width: 100%;
+    border: 1px solid var(--color-grey-500);
+    opacity: 0.2;
+  }
 }
