--- a/src/styles/components/sidebar.scss
+++ b/src/styles/components/sidebar.scss
@@ -22,6 +22,10 @@
   margin-bottom: 4rem;
   &__img {
     cursor: pointer;
+    transition: all 250ms ease;
+    &:hover {
+      transform: scale(1.1);
+    }
     @media only screen and (max-width: 750px) {
       height: 2rem;
     }
